# stelf

./: .gitignore  .gitmodules  .ocamlformat  BUILD.md  CONTRIBUTING.md  FUTURE.md  FUTURE.typ  Makefile  README.md  STYLE.md  delphin.sml.ml  dune  dune-project  dune-workspace  stelf.opam  twelf.opam
src/: Twelf.ml  dune
src/Api/: dune
src/api/: api.ml  dune
src/compile/: Assign.ml  Assign.mli  Assign_intf.ml  CompSyn.ml  CompSyn.mli  CompSyn_intf.ml  Compile.mli  Compile_.ml  Compile_.mli  Compile_intf.ml  Cprint.ml  Cprint.mli  Cprint_intf.ml  Subtree.ml  Subtree.mli  Subtree_intf.ml  assign.fun.ml  assign.ml  assign.sig.ml  assign_intf.ml  compSyn.ml  compSyn.mli  compSyn.sig.ml  compSyn_intf.ml  compile.ml  compile_.fun.ml  compile_.ml  compile_.sig.ml  compile_.sml.ml  compile_intf.ml  compsyn.fun.ml  cprint.fun.ml  cprint.ml  cprint.mli  cprint.sig.ml  cprint_intf.ml  dune  sources.dune  subtree.fun.ml  subtree.ml  (+3 more)
src/compress/: Compress.ml  Compress.mli  Compress_.ml  Compress_.mli  Compress_intf.ml  Reductio.ml  Rep.ml  Rep.mli  Sgn.ml  Sgn_intf.ml  Strict.ml  Syntax.ml  compress.ml  compress_.fun.ml  compress_.ml  compress_.sig.ml  compress_intf.ml  convert.sml.ml  dune  parse.sml.ml  reductio.ml  reductio.sml.ml  rep.ml  rep.mli  rep.sml.ml  sgn.ml  sgn.mli  sgn.sml.ml  sgn_intf.ml  sources.dune  strict.ml  strict.sml.ml  syntax.ml  syntax.sml.ml
src/cover/: Cover_.ml  Cover_.mli  Cover_intf.ml  Total.ml  Total_intf.ml  cover.ml  cover.mli  cover_.fun.ml  cover_.ml  cover_.mli  cover_.sig.ml  cover_.sml.ml  cover_intf.ml  dune  sources.dune  total.fun.ml  total.ml  total.mli  total.sig.ml  total_intf.ml
src/debug/: Debug.ml  Debug.mli  debug.ml  dune
src/domains/: Domains.ml  Domains.mli  Domains_.ml  Domains_.mli  Field.ml  Field_intf.ml  Integers.ml  IntegersMod.ml  IntegersMod.mli  Integers_intf.ml  OrderedField.ml  OrderedField.mli  OrderedField_intf.ml  Rationals.ml  Rationals_intf.ml  domains.ml  domains.mli  domains_.ml  domains_.mli  domains_.sml.ml  dune  field.ml  field.mli  field.sig.ml  field_intf.ml  integers.fun.ml  integers.ml  integers.mli  integers.sig.ml  integers_intf.ml  integers_mod.fun.ml  integers_mod.ml  integers_mod.mli  ordered_field.ml  ordered_field.mli  ordered_field.sig.ml  ordered_field_intf.ml  rationals.fun.ml  rationals.ml  rationals.mli  (+3 more)
src/flit/: Flit.mli  FlitOldSmlnjPack.ml  Flit_.ml  Flit_.mli  Flit_intf.ml  dune  flit.ml  flit_.fun.ml  flit_.ml  flit_.sig.ml  flit_.sml.ml  flit_intf.ml  flit_old_smlnj_pack.ml  flit_old_smlnj_pack.sml.ml  script.sml.ml  sources.dune
src/formatter/: Formatter_.ml  Formatter_intf.ml  dune  formatter.ml  formatter.mli  formatter_.fun.ml  formatter_.ml  formatter_.mli  formatter_.sig.ml  formatter_.sml.ml  formatter_intf.ml  sources.dune
src/frontend/: Buildid.ml  Fquery.ml  Fquery.mli  Fquery_intf.ml  Frontend.ml  Frontend.mli  Frontend_.ml  Frontend_.mli  Lexer.ml  Lexer.mli  Lexer_intf.ml  ParseCondec.ml  ParseCondec.mli  ParseCondec_intf.ml  ParseFixity.ml  ParseFixity.mli  ParseFixity_intf.ml  ParseMode.ml  ParseMode.mli  ParseMode_intf.ml  ParseModule.ml  ParseModule.mli  ParseModule_intf.ml  ParseQuery.ml  ParseQuery.mli  ParseQuery_intf.ml  ParseTerm.ml  ParseTerm.mli  ParseTerm_intf.ml  ParseThm.ml  ParseThm.mli  ParseThm_intf.ml  Parser.ml  Parser.mli  Parser_intf.ml  Parsing.ml  Parsing.mli  Parsing_intf.ml  ReconCondec.ml  ReconCondec.mli  (+142 more)
src/global/: Global.ml  Global_.ml  Global_.mli  Global_intf.ml  dune  global.ml  global.mli  global_.ml  global_.sig.ml  global_.sml.ml  global_intf.ml  sources.dune
src/heuristic/: Heuristic.ml  Heuristic.mli  HeuristicSum.ml  Heuristic_.ml  Heuristic_.mli  Heuristic_intf.ml  dune  heuristic.ml  heuristic.sum.fun.ml  heuristic_.fun.ml  heuristic_.ml  heuristic_.sig.ml  heuristic_intf.ml  heuristic_sum.ml  sources.dune
src/index/: Index.ml  Index.mli  IndexSkolem.ml  IndexSkolem.mli  Index_.ml  Index_.mli  Index_intf.ml  dune  index.ml  index.mli  index_.fun.ml  index_.ml  index_.mli  index_.sig.ml  index_.sml.ml  index_intf.ml  index_skolem.fun.ml  index_skolem.ml  index_skolem.mli  sources.dune
src/intInf/: IntInf.ml  IntInfSig.ml  IntInf_.ml  IntInf_.mli  dune
src/int_inf/: IntInf.mli  IntInfSig.ml  IntInfSig.mli  IntInfSig_intf.ml  IntInf_.ml  IntInf_.mli  dune  int_inf.ml  int_inf.mli  int_inf_.ml  int_inf_.mli  int_inf_.sml.ml  int_inf_sig.ml  int_inf_sig.mli  int_inf_sig.sml.ml  sources.dune
src/lambda/: Abstract.ml  Abstract.mli  Abstract_intf.ml  Approx.ml  Approx.mli  Approx_intf.ml  Constraints.ml  Constraints.mli  Constraints_intf.ml  Conv.ml  Conv_intf.ml  Fgnopn.ml  Fgnopn.mli  Fgnopn_intf.ml  Fgnopntable.ml  Fgnopntable.mli  IntSyn.ml  Intsyn.ml  Intsyn.mli  Intsyn_intf.ml  Lambda.ml  Lambda.mli  Lambda_.ml  Lambda_.mli  Match.ml  Match.mli  Match_intf.ml  Order.ml  Order_intf.ml  Tomega.ml  Tomega.mli  Tomega_intf.ml  Unify.ml  Unify.mli  Unify_intf.ml  Whnf.ml  Whnf.mli  Whnf_intf.ml  abstract.fun.ml  abstract.ml  (+64 more)
src/m2/: Filling.ml  Filling.mli  Filling_intf.ml  Init.ml  Init.mli  Init_intf.ml  Lemma.ml  Lemma.mli  Lemma_intf.ml  M2.ml  M2.mli  M2_.ml  M2_.mli  MetaAbstract.ml  MetaAbstract.mli  MetaAbstract_intf.ml  MetaGlobal.ml  MetaGlobal.mli  MetaGlobal_intf.ml  MetaPrint.ml  MetaPrint.mli  MetaPrint_intf.ml  Metasyn.ml  Metasyn.mli  Metasyn_intf.ml  Mpi.ml  Mpi.mli  Mpi_intf.ml  Prover.ml  Prover.mli  Prover_intf.ml  Qed.ml  Qed_intf.ml  Recursion.ml  Recursion.mli  Recursion_intf.ml  Search.ml  Search.mli  Search_intf.ml  Skolem.ml  (+88 more)
src/meta/: Funnames.ml  Funnames_intf.ml  Funprint.ml  Funprint_intf.ml  Funsyn.ml  Funsyn.mli  Funsyn_intf.ml  Funtypecheck.ml  Funtypecheck_intf.ml  Funweaken.ml  Funweaken_intf.ml  Inference.ml  Inference.mli  Inference_intf.ml  Interpret.ml  Interpret_intf.ml  Meta_.ml  Meta_.mli  MtpAbstract.ml  MtpMpi.ml  (+164 more)
test/: all.sml.ml  all_nt.sml.ml  cp2nd.sml.ml  cp3rd.sml.ml  cr.sml.ml  dune  integration_runner.ml  m.sml.ml  meta.sml.ml  regression.ml  regression.sml.ml  regression.txt  relfun.sml.ml  runquiet.sml.ml  skolem.sml.ml  sources.dune  unit_runner.ml  unsafe.sml.ml
(+1495 files in other folders)
