(library
 (name twelf)
 (public_name twelf)
 (libraries
  compile
  compress
  cover
  domains
  flit
  formatter
  frontend
  global
  heuristic
  index
  int_inf
  ; inverse 
  lambda
  m2
  meta
  modes
  modules
  msg
  names
  netserver
  opsem
  order
  paths
  print
  prover
  server
  debug
  solvers
  stream
  style
  subordinate
  table
  tabling
  terminate
  thm
  timing
  tomega_lib
  trail
  typecheck
  unique
  worldcheck))
