; (include sources.dune)

(env
 (_
  (flags
   (:standard -g))))

(test
 (name regression)
 (libraries twelf alcotest basis regression_cases)
 (deps
  (source_tree ../examples)
  (source_tree ../examples_clp))
 (action
  (chdir
   %{workspace_root}
   (run %{exe:regression.exe})))
 (flags
  (:standard -g -open Basis)))

(rule
 (alias profile_test)
 (action
  (chdir
   %{workspace_root}
   (run
    perf
    record
    -o
    regression.perf
    --call-graph
    dwarf
    --
    %{exe:regression.exe}
    test
    regression
    %{env:TEST=1}))))
