; (include sources.dune)

(env
 (_
  (flags
   (:standard -g))))

(test
 (name integration_runner)
 (libraries stelf alcotest basis integration)
 (deps
  (source_tree ../examples)
  (source_tree ../examples_clp))
 (action
  (chdir
   %{workspace_root}
   (run %{exe:integration_runner.exe})))
 (flags
  (:standard -g -open Basis)))

(test
 (name unit_runner)
 (libraries stelf alcotest basis unit)
 (deps
  (source_tree ../examples)
  (source_tree ../examples_clp))
 (action
  (chdir
   %{workspace_root}
   (run %{exe:unit_runner.exe})))
 (flags
  (:standard -g -open Basis)))

(rule
 (alias profile_test)
 (action
  (chdir
   %{workspace_root}
   (run
    perf
    record
    -o
    integration.perf
    --call-graph
    dwarf
    --
    %{exe:integration_runner.exe}
    test
    integration
    %{env:TEST=1}))))
