; (include sources.dune)

(library
 (name compile)
 (public_name twelf.compile)
 (modules compSyn cprint subtree assign compile_)
 (libraries
  global
  table
  lambda
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter.Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Subordinate
   -open
   Subordinate.Subordinate_))
 (wrapped true))
