; (include sources.dune)

(library
 (name compile)
 (public_name stelf.compile)
 (modules
  compSyn
  cprint
  subtree
  assign
  compile_
  assign_intf
  compSyn_intf
  compile_intf
  cprint_intf
  subtree_intf)
 (libraries
  global
  table
  lambda
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
  Formatter__Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Subordinate
   -open
   Subordinate))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
