; (include sources.dune)

(library
 (name compress)
 (public_name twelf.compress)
 (modules syntax strict sgn reductio compress_ rep)
 (libraries global lambda basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
