; (include sources.dune)

(library
 (name compress)
 (public_name stelf.compress)
 (modules
  syntax
  strict
  sgn
  reductio
  compress_
  rep
  compress_intf
  sgn_intf)
 (libraries global lambda basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
