; (include sources.dune)

(library
 (name compress)
 (public_name stelf.compress)
 (modules
  Syntax
  Strict
  Sgn
  Reductio
  Compress_
  Rep
  Compress_intf
  Sgn_intf)
 (libraries
  global
  lambda
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
