; (include sources.dune)

(library
 (name cover)
 (public_name stelf.cover)
 (modules
  Total
  Cover_
  Cover_intf
  Total_intf)
 (libraries
  global
  lambda
  names
  paths
  table
  formatter
  print
  subordinate
  modes
  thm
  terminate
  index
  solvers
  worldcheck
  typecheck
  timing
  unique
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Table
   -open
   Table.Table_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Thm
   -open
   Thm.Thm_
   -open
   Terminate
   -open
   Terminate.Terminate_
   -open
   Index
   -open
   Index.Index_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Worldcheck
   -open
   Worldcheck.Worldcheck_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Unique
   -open
   Unique.Unique_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show)))
