; (include sources.dune)

(library
 (name domains)
 (public_name stelf.domains)
 (modules
  Field
  OrderedField
  Integers
  Rationals
  IntegersMod
  Domains_
  Field_intf
  Integers_intf
  OrderedField_intf
  Rationals_intf)
 (libraries
  intInf
  basis)
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
