(include sources.dune)

(library
 (name flit)
 (public_name twelf.flit)
 (modules flit_old_smlnj_pack flit_)
 (libraries global table lambda names index paths print basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global_
   -open
   Table_
   -open
   Lambda_
   -open
   Names_
   -open
   Index_
   -open
   Paths_
   -open
   Print_))
 (wrapped false))
