(include sources.dune)

(library
 (name frontend)
 (public_name twelf.frontend)
 (modules
  unknownexn
  unknownexn_smlnj
  lexer
  parsing
  recon_term
  recon_condec
  recon_query
  recon_mode
  recon_thm
  recon_module
  parse_term
  parse_condec
  parse_query
  parse_fixity
  parse_mode
  parse_thm
  parse_module
  parser
  solve
  fquery
  buildid
  version
  twelf
  frontend_)
 (libraries
  timing
  stream
  global
  table
  lambda
  names
  paths
  print
  typecheck
  style
  modes
  tabling
  terminate
  index
  thm
  m2
  compile
  opsem
  subordinate
  modules
  meta
  smlofnj
  solvers
  worldcheck
  unique
  cover
  tomega
  prover
  flit
  msg
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing_
   -open
   Stream_
   -open
   Global_
   -open
   Table_
   -open
   Lambda_
   -open
   Names_
   -open
   Paths_
   -open
   Print_
   -open
   Typecheck_
   -open
   Style_
   -open
   Modes_
   -open
   Terminate_
   -open
   Index_
   -open
   Thm_
   -open
   M2_
   -open
   Compile_
   -open
   Opsem_
   -open
   Subordinate_
   -open
   Modules_
   -open
   Meta_
   -open
   Solvers_
   -open
   Worldcheck_
   -open
   Unique_
   -open
   Cover_
   -open
   Tomega_
   -open
   Prover_
   -open
   Flit_
   -open
   Msg_))
 (wrapped false))
