; (include sources.dune)

(library
 (name frontend)
 (public_name stelf.frontend)
 (modules
  Unknownexn
  UnknownexnSmlnj
  Lexer
  Parsing
  ReconTerm
  ReconCondec
  ReconQuery
  ReconMode
  ReconThm
  ReconModule
  ParseTerm
  ParseCondec
  ParseQuery
  ParseFixity
  ParseMode
  ParseThm
  ParseModule
  Parser
  Solve
  Fquery
  Buildid
  Version
  Twelf_
  Frontend_
  Fquery_intf
  Lexer_intf
  ParseCondec_intf
  ParseFixity_intf
  ParseMode_intf
  ParseModule_intf
  ParseQuery_intf
  ParseTerm_intf
  ParseThm_intf
  Parser_intf
  Parsing_intf
  ReconCondec_intf
  ReconMode_intf
  ReconModule_intf
  ReconQuery_intf
  ReconTerm_intf
  ReconThm_intf
  Twelf_intf
  Solve_intf
  Unknownexn_intf)
 (libraries
  timing
  stream
  debug
  global
  table
  lambda
  names
  paths
  print
  typecheck
  style
  modes
  tabling
  terminate
  index
  thm
  m2
  compile
  opsem
  subordinate
  modules
  meta
  smlofnj
  solvers
  worldcheck
  unique
  cover
  tomega_lib
  prover
  flit
  msg
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Stream
   -open
   Stream.Stream_
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Tabling
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Print
   -open
   Print.Print_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Style
   -open
   Style.Style_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Terminate
   -open
   Terminate.Terminate_
   -open
   Index
   -open
   Index.Index_
   -open
   Thm
   -open
   Thm.Thm_
   -open
   M2
   -open
   M2.M2_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Modules
   -open
   Modules.Modules_
   -open
   Meta
   -open
   Meta.Meta_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Worldcheck
   -open
   Worldcheck.Worldcheck_
   -open
   Unique
   -open
   Unique.Unique_
   -open
   Cover
   -open
   Cover.Cover_
   -open
   Tomega_lib
   -open
   Tomega_lib.Tomega_
   -open
   Prover
   -open
   Flit
   -open
   Flit.Flit_
   -open
   Msg
   -open
   Msg.Msg_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
