; (include sources.dune)

(library
 (name index)
 (public_name stelf.index)
 (modules
  index_skolem
  index_
  index_intf)
 (libraries lambda table global basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Table
   -open
   Table.Table_
   -open
   Global
   -open
   Global.Global_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
