; (include sources.dune)

(library
 (name lambda)
 (public_name twelf.lambda)
 (modules
  fgnopn
  fgnopntable
  order
  intsyn
  whnf
  conv
  tomega
  constraints
  unify
  match
  abstract
  approx
  intsyn_intf
  lambda_)
 (libraries containers global trail table basis debug)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
