; (include sources.dune)

(library
 (name lambda)
 (public_name stelf.lambda)
 (modules
  fgnopn
  fgnopntable
  order
  intsyn
  whnf
  conv
  tomega
  constraints
  unify
  match
  abstract
  approx
  intsyn_intf
  lambda_
  abstract_intf
  approx_intf
  constraints_intf
  conv_intf
  fgnopn_intf
  match_intf
  order_intf
  tomega_intf
  unify_intf
  whnf_intf)
 (libraries containers global trail table basis debug)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
