; (include sources.dune)

(library
 (name lambda)
 (public_name stelf.lambda)
 (modules
  Fgnopn
  Fgnopntable
  Order
  IntSyn
  Intsyn
  Whnf
  Conv
  Tomega
  Constraints
  Unify
  Match
  Abstract
  Approx
  Intsyn_intf
  Lambda_
  Abstract_intf
  Approx_intf
  Constraints_intf
  Conv_intf
  Fgnopn_intf
  Match_intf
  Order_intf
  Tomega_intf
  Unify_intf
  Whnf_intf)
 (libraries
  containers
  tag
  global
  trail
  table
  basis
  syntax
  debug)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
