(include sources.dune)

(library
 (name m2)
 (public_name twelf.m2)
 (modules
  meta_global
  skolem
  metasyn
  meta_abstract
  meta_print
  init
  search
  lemma
  splitting
  filling
  qed
  recursion
  strategy
  prover
  mpi
  m2_)
 (libraries
  stream
  global
  lambda
  names
  modes
  paths
  formatter
  print
  typecheck
  terminate
  index
  thm
  opsem
  compile
  subordinate
  table
  timing
  solvers
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Stream_
   -open
   Global_
   -open
   Lambda_
   -open
   Names_
   -open
   Modes_
   -open
   Paths_
   -open
   Formatter_
   -open
   Print_
   -open
   Typecheck_
   -open
   Terminate_
   -open
   Index_
   -open
   Thm_
   -open
   Opsem_
   -open
   Compile_
   -open
   Subordinate_
   -open
   Table_
   -open
   Timing_
   -open
   Solvers_))
 (wrapped false))
