; (include sources.dune)

(library
 (name m2)
 (public_name twelf.m2)
 (modules
  meta_global
  skolem
  metasyn
  meta_abstract
  meta_print
  init
  search
  lemma
  splitting
  filling
  qed
  recursion
  strategy
  prover
  mpi
  m2_)
 (libraries
  stream
  global
  lambda
  names
  modes
  paths
  formatter
  print
  typecheck
  terminate
  index
  thm
  opsem
  compile
  subordinate
  table
  timing
  solvers
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Stream
   -open
   Stream.Stream_
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Formatter
   -open
   Formatter.Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Terminate
   -open
   Terminate.Terminate_
   -open
   Index
   -open
   Index.Index_
   -open
   Thm
   -open
   Thm.Thm_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Subordinate
   -open
   Subordinate.Subordinate_
   -open
   Table
   -open
   Table.Table_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Solvers
   -open
   Solvers.Solvers_))
 (wrapped true))
