; (include sources.dune)

(library
 (name meta)
 (public_name stelf.meta)
 (modules
  funsyn
  funnames
  funtypecheck
  funprint
  weaken
  mtp_weaken
  funweaken
  relfun
  interpret
  meta_
  mtp_abstract
  mtp_init
  mtp_filling
  mtp_global
  mtp_data
  mtp_mpi
  mtp_recursion
  mtp_search
  uniquesearch
  mtp_splitting
  inference
  statesyn
  mtp_strategy
  mtp_print
  mtp_prover
  funnames_intf
  funprint_intf
  funsyn_intf
  funtypecheck_intf
  funweaken_intf
  inference_intf
  interpret_intf
  mtp_abstract_intf
  mtp_data_intf
  mtp_filling_intf
  mtp_global_intf
  mtp_init_intf
  mtp_mpi_intf
  mtp_print_intf
  mtp_prover_intf
  mtp_recursion_intf
  mtp_search_intf
  mtp_splitting_intf
  mtp_strategy_intf
  relfun_intf
  statesyn_intf
  uniquesearch_intf
  weaken_intf)
 (libraries
  global
  trail
  table
  lambda
  names
  formatter
  print
  subordinate
  modes
  typecheck
  index
  opsem
  compile
  heuristic
  timing
  solvers
  m2
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Index
   -open
   Index.Index_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Heuristic
   -open
   Heuristic.Heuristic_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   M2
   -open
   M2.M2_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
