; (include sources.dune)

(library
 (name meta)
 (public_name stelf.meta)
 (modules
  Funsyn
  Funnames
  Funtypecheck
  Funprint
  Weaken
  MtpWeaken
  Funweaken
  Relfun
  Interpret
  Meta_
  MtpAbstract
  MtpInit
  MtpFilling
  MtpGlobal
  MtpData
  MtpMpi
  MtpRecursion
  MtpSearch
  Uniquesearch
  MtpSplitting
  Inference
  Statesyn
  MtpStrategy
  MtpPrint
  MtpProver
  Funnames_intf
  Funprint_intf
  Funsyn_intf
  Funtypecheck_intf
  Funweaken_intf
  Inference_intf
  Interpret_intf
  MtpAbstract_intf
  MtpData_intf
  MtpFilling_intf
  MtpGlobal_intf
  MtpInit_intf
  MtpMpi_intf
  MtpPrint_intf
  MtpProver_intf
  MtpRecursion_intf
  MtpSearch_intf
  MtpSplitting_intf
  MtpStrategy_intf
  Relfun_intf
  Statesyn_intf
  Uniquesearch_intf
  Weaken_intf)
 (libraries
  global
  trail
  table
  lambda
  names
  formatter
  print
  subordinate
  modes
  typecheck
  index
  opsem
  compile
  heuristic
  timing
  solvers
  m2
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Trail
   -open
   Trail.Trail_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Modes
   -open
   Modes.Modes_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Index
   -open
   Index.Index_
   -open
   Opsem
   -open
   Opsem.Opsem_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   Heuristic
   -open
   Heuristic.Heuristic_
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   M2
   -open
   M2.M2_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
