; (include sources.dune)

(library
 (name modes)
 (public_name stelf.modes)
 (modules
  Modesyn
  Modetable
  Modedec
  Modecheck
  Modeprint
  Modes_
  Modecheck_intf
  Modedec_intf
  Modeprint_intf
  Modesyn_intf
  Modetable_intf)
 (libraries
  global
  table
  lambda
  formatter
  print
  names
  paths
  index
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Print
   -open
   Print.Print_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Index
   -open
   Index.Index_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
