; (include sources.dune)

(library
 (name modules)
 (public_name twelf.modules)
 (modules modsyn modules_)
 (libraries global table lambda names paths typecheck basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Paths
   -open
   Paths.Paths_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
