; (include sources.dune)

(library
 (name names)
 (public_name twelf.names)
 (modules names_)
 (libraries table global lambda basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Global
   -open
   Global.Global_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true))
