; (include sources.dune)

(library
 (name netserver)
 (public_name twelf.netserver)
 (modules netserver_)
 (libraries timing frontend msg basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Frontend
   -open
   Frontend.Frontend_
   -open
   Msg
   -open
   Msg.Msg_))
 (wrapped true)
 (preprocess
  (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
