; (include sources.dune)

(library
 (name netserver)
 (public_name stelf.netserver)
 (modules
  Netserver_
  Netserver_intf)
 (libraries
  timing
  frontend
  msg
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Timing
   -open
   Timing.Timing_
   -open
   Frontend
   -open
   Frontend.Frontend_
   -open
   Msg
   -open
   Msg.Msg_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
