(include sources.dune)

(library
 (name opsem)
 (public_name twelf.opsem)
 (modules
  table_param
  abstract_tabled
  memo_table
  subtree_inst
  sw_subtree
  tabled_machine
  absmachine
  absmachine_sbt
  ptrecon
  trace
  tmachine
  swmachine
  opsem_)
 (libraries
  global
  table
  lambda
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  tabling
  compile
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global_
   -open
   Table_
   -open
   Lambda_
   -open
   Names_
   -open
   Print_
   -open
   Formatter_
   -open
   Index_
   -open
   Typecheck_
   -open
   Solvers_
   -open
   Subordinate_
   -open
   Compile_
   -open
   CompSyn
   -open
   Assign))
 (wrapped false))
