; (include sources.dune)

(library
 (name opsem)
 (public_name twelf.opsem)
 (modules
  table_param
  abstract_tabled
  memo_table
  subtree_inst
  sw_subtree
  tabled_machine
  absmachine
  absmachine_sbt
  ptrecon
  trace
  tmachine
  swmachine
  opsem_)
 (libraries
  global
  table
  lambda
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  tabling
  compile
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter.Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Subordinate
   -open
   Subordinate.Subordinate_
   -open
   Compile
   -open
   Compile.Compile_
   -open
   CompSyn
   -open
   Assign
   -open
   Tabling))
 (wrapped true))
