; (include sources.dune)

(library
 (name opsem)
 (public_name stelf.opsem)
 (modules
  TableParam
  AbstractTabled
  MemoTable
  SubtreeInst
  SwSubtree
  TabledMachine
  Absmachine
  AbsmachineSbt
  Ptrecon
  Trace
  Tmachine
  Swmachine
  Opsem_
  Absmachine_intf
  AbsmachineSbt_intf
  AbstractTabled_intf
  MemoTable_intf
  Ptrecon_intf
  SwSubtree_intf
  TableParam_intf
  TabledMachine_intf
  Trace_intf)
 (libraries
  global
  table
  lambda
  names
  print
  formatter
  index
  typecheck
  solvers
  subordinate
  tabling
  compile
  basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Print
   -open
   Print.Print_
   -open
   Formatter
   -open
   Formatter__Formatter_
   -open
   Index
   -open
   Index.Index_
   -open
   Typecheck
   -open
   Typecheck.Typecheck_
   -open
   Solvers
   -open
   Solvers.Solvers_
   -open
   Subordinate
   -open
   Subordinate
   -open
   Compile
   -open
   Compile.Compile_
   -open
   CompSyn
   -open
   Assign
   -open
   Tabling))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
