; (include sources.dune)

(library
 (name order)
 (public_name twelf.order)
 (modules order_)
 (libraries table lambda basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
