; (include sources.dune)

(library
 (name order)
 (public_name stelf.order)
 (modules order_)
 (libraries table lambda basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Table
   -open
   Table.Table_
   -open
   Lambda
   -open
   Lambda.Lambda_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
