; (include sources.dune)

(library
 (name paths)
 (public_name twelf.paths)
 (modules origins paths_)
 (libraries lambda global table basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
(preprocess (staged_pps ppx_import ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
