; (include sources.dune)

(library
 (name paths)
 (public_name stelf.paths)
 (modules origins paths_)
 (libraries lambda global table basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Global
   -open
   Global.Global_
   -open
   Table
   -open
   Table.Table_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
