; (include sources.dune)

(library
 (name print)
 (public_name stelf.print)
 (modules
  symbol
  clause_print
  print_
  traverse
  print_twega
  print_xml
  print_omdoc)
 (libraries lambda names formatter basis)
 (flags
  (:standard
   -w
   -A
   -open
   Basis
   -open
   Lambda
   -open
   Lambda.Lambda_
   -open
   Names
   -open
   Names.Names_
   -open
   Formatter
   -open
   Formatter.Formatter_))
 (wrapped true)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
